--- a/pravila-i-usloviya.html
+++ b/pravila-i-usloviya.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/pravila-i-usloviya" />
     <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='12.03.2021' />
+    <meta property="article:modified_time" content='07.04.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/divine.webp"/>
     <meta property="og:image:alt" content="правила игры в Jozz" />
     <meta name="twitter:title" content="Правила и условия работы с официальным сайтом Джозз казино" />
@@ -79,8 +79,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a >
-                            Турниры (Скоро)
+                        <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523">
+                            Турниры
                         </a>
                     </li>
                     <li>
@@ -106,7 +106,7 @@
 
 
             <div class="header__nav-login">
-                <a href="/login" class="btn btn-registration">Регистрация</a>
+                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
@@ -383,7 +383,7 @@
 
                 </div>
             </a>
-            <a  title="Регистрация" class="game-list__item">
+            <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" title="Регистрация" class="game-list__item">
                 <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
