--- a/mobilnaya-versiya.html
+++ b/mobilnaya-versiya.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/mobilnaya-versiya" />
     <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='07.04.2021' />
+    <meta property="article:modified_time" content='12.03.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/mob.webp"/>
     <meta property="og:image:alt" content="Мобильная версия в Jozz" />
     <meta name="twitter:title" content="Мобильная версия официального сайта Джозз казино" />
@@ -80,8 +80,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523">
-                            Турниры
+                        <a >
+                            Турниры (Скоро)
                         </a>
                     </li>
                     <li>
@@ -107,7 +107,7 @@
 
 
             <div class="header__nav-login">
-                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" class="btn btn-registration">Регистрация</a>
+                <a href="/login" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
@@ -179,21 +179,21 @@
             <li>Не нужно повторно проходить регистрацию в азартном клубе. Авторизация в мобильном казино Jozz выполняется по тем же данным, что и на официальном сайте. </li>
         </ol>
         <div class="game-list">
-            <a href="/divine-fortune" title="Divine Fortune" class="game-list__item">
+            <a  title="Divine Fortune" class="game-list__item">
                 <p class="game-text">Divine Fortune</p>
                 <div class="game-list__item-img">
                       <img src='/img/divine.webp'  title='Divine Fortune' alt='Divine Fortune'>
 
                 </div>
             </a>
-            <a href="/dead-or-alive" title="Dead or Alive" class="game-list__item">
+            <a title="Dead or Alive" class="game-list__item">
                 <p class="game-text">Dead or Alive</p>
                 <div class="game-list__item-img">
                   <img src='/img/alive.webp'  title='Dead or Alive' alt='Dead or Alive'>
 
                 </div>
             </a>
-            <a href="/dead-or-alive-2" title="Dead or Alive 2" class="game-list__item">
+            <a title="Dead or Alive 2" class="game-list__item">
                 <p class="game-text">Dead or Alive 2</p>
                 <div class="game-list__item-img">
 
@@ -201,7 +201,7 @@
 
                 </div>
             </a>
-            <a href="/sakura-fortune" title="Sakura Fortune" class="game-list__item">
+            <a  title="Sakura Fortune" class="game-list__item">
                 <p class="game-text">Sakura Fortune</p>
                 <div class="game-list__item-img">
 
@@ -209,7 +209,7 @@
 
                 </div>
             </a>
-            <a href="/fat-santa" title="Fat Santa" class="game-list__item">
+            <a  title="Fat Santa" class="game-list__item">
                 <p class="game-text">Fat Santa</p>
                 <div class="game-list__item-img">
 
@@ -217,7 +217,7 @@
 
                 </div>
             </a>
-            <a href="/gonzos-quest-megaways" title="Gonzo's Quest MW" class="game-list__item">
+            <a  title="Gonzo's Quest MW" class="game-list__item">
                 <p class="game-text">Gonzo's Quest MW</p>
                 <div class="game-list__item-img">
 
@@ -225,7 +225,7 @@
 
                 </div>
             </a>
-            <a href="/book-of-souls" title="Book of Souls" class="game-list__item">
+            <a  title="Book of Souls" class="game-list__item">
                 <p class="game-text">Book of Souls</p>
                 <div class="game-list__item-img">
 
@@ -233,7 +233,7 @@
 
                 </div>
             </a>
-            <a href="/extra-chilli" title="Extra Chilli" class="game-list__item">
+            <a  title="Extra Chilli" class="game-list__item">
                 <p class="game-text">Extra Chilli</p>
                 <div class="game-list__item-img">
 
@@ -241,7 +241,7 @@
 
                 </div>
             </a>
-            <a href="/nights-of-egypt" title="Nights of Egypt" class="game-list__item">
+            <a  title="Nights of Egypt" class="game-list__item">
                 <p class="game-text">Nights of Egypt</p>
                 <div class="game-list__item-img">
 
@@ -249,7 +249,7 @@
 
                 </div>
             </a>
-            <a href="/egyptian-rebirth-ii" title="Egyptian Rebirth 2" class="game-list__item">
+            <a  title="Egyptian Rebirth 2" class="game-list__item">
                 <p class="game-text">Egyptian Rebirth 2</p>
                 <div class="game-list__item-img">
 
@@ -313,7 +313,7 @@
 
                 </div>
             </a>
-            <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" title="Регистрация" class="game-list__item">
+            <a  title="Регистрация" class="game-list__item">
                 <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
