--- a/mobilnaya-versiya.html
+++ b/mobilnaya-versiya.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="Играть в мобильную версию онлайн слотов и игровых автоматов в Джозз казино с мобильного или планшета, бесплатно без регистрации удобный интрефейс и быстрая скорость загрузки"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/mobilnaya-versiya" />
-    <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='12.03.2021' />
+    <meta property="article:published_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='17.05.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/mob.webp"/>
     <meta property="og:image:alt" content="Мобильная версия в Jozz" />
     <meta name="twitter:title" content="Мобильная версия официального сайта Джозз казино" />
@@ -107,7 +107,7 @@
 
 
             <div class="header__nav-login">
-                <a href="/login" class="btn btn-registration">Регистрация</a>
+                <a href="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
