--- a/cashback.html
+++ b/cashback.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="Джозз казино дарит еженедельный кэшбек всем зарегистрированным игрокам. Начинай играть на деньги и получай свой cashback в пятницу без отыгрыша и с быстрым выводом денег"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/cashback" />
-    <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='07.04.2021' />
+    <meta property="article:published_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='17.05.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/cash.webp"/>
     <meta property="og:image:alt" content="Cashback в Jozz" />
     <meta name="twitter:title" content="Cashback в Джозз казино официальный сайт, как получить кэшбэк" />
@@ -75,8 +75,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523">
-                            Турниры
+                        <a >
+                            Турниры (Скоро)
                         </a>
                     </li>
                     <li>
@@ -102,7 +102,7 @@
 
 
             <div class="header__nav-login">
-                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" class="btn btn-registration">Регистрация</a>
+                <a href="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
@@ -337,7 +337,7 @@
 
                 </div>
             </a>
-            <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" title="Регистрация" class="game-list__item">
+            <a  title="Регистрация" class="game-list__item">
                 <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
