--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <meta name="robots" content="index, follow">
     <meta name="title" content="Джозз казино официальный сайт и рабочее зеркало Jozz Casino"/>
     <meta name="keywords" content="Джозз казино, онлайн казино Jozz, официальный сайт Джозз казино"/>
-    <meta name="description" content="Джозз казино вход и регистрация на официальный сайт и рабочее зеркало Jozz Casino"/>
+    <meta name="description" content="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea"/>
     <link rel="canonical" href="https://jozzcazino.github.io/"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:title" content="Джозз казино официальный сайт и рабочее зеркало Jozz Casino"/>
-    <meta property="og:description" content="Джозз казино вход и регистрация на официальный сайт и рабочее зеркало Jozz Casino"/>
+    <meta property="og:description" content="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/" />
-    <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='07.04.2021' />
+    <meta property="article:published_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='17.05.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/JozzCasino.webp"/>
     <meta property="og:image:alt" content="официальный сайт Jozz" />
     <meta name="twitter:title" content="Джозз казино официальный сайт и рабочее зеркало Jozz Casino" />
-    <meta name="twitter:description" content="Джозз казино вход и регистрация на официальный сайт и рабочее зеркало Jozz Casino" />
+    <meta name="twitter:description" content="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" />
     <meta name="twitter:image" content="https://jozzcazino.github.io/img/JozzCasino.webp" />
     <meta name="twitter:card" content="summary_large_image" />
     <script type="application/ld+json">
@@ -32,7 +32,7 @@
             "@type":"SiteNavigationElement",
             "headline":"Джозз казино официальный сайт и рабочее зеркало Jozz Casino",
             "name":["Казино Jozz","Игровые автоматы","Покер","Настольные игры","Регистрация","Зеркало","Бонусы","Кэшбек","Вывод денег", "Рулетка"],
-            "description":["Джозз казино вход и регистрация на официальный сайт и рабочее зеркало Jozz Casino",
+            "description":["https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea",
                 "Джозз казино играть в лучшие онлайн автоматы бесплатно без регистрации или на реальные деньги. Новое казино 2021 года, получи бонус за регистрацию",
                 "Играть в онлайн покер в Джозз казино бесплатно без регистрации или на реальные деньги. Играй в лучший онлайн покер от мировых провайдеров",
                 "Играть в настольные игры бесплатно и без регистрации на официальном сайте Jozz казино или рабочем зеркале",
@@ -80,8 +80,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523">
-                            Турниры
+                        <a >
+                            Турниры (Скоро)
                         </a>
                     </li>
                     <li>
@@ -107,7 +107,7 @@
 
 
             <div class="header__nav-login">
-                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" class="btn btn-registration">Регистрация</a>
+                <a href="/login" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
@@ -337,7 +337,7 @@
 
                     </div>
                 </a>
-                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" title="Регистрация" class="game-list__item">
+                <a  title="Регистрация" class="game-list__item">
                     <p class="game-text">Регистрация</p>
                     <div class="game-list__item-img">
 
