--- a/o-nas.html
+++ b/o-nas.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="Как связаться с онлайн казино Джозз, преимущества официального сайта и рабочего зеркала Jozz Casino"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/o-nas" />
-    <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='07.04.2021' />
+    <meta property="article:published_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='17.05.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/o-nas.webp"/>
     <meta property="og:image:alt" content="Обзор Jozz" />
     <meta name="twitter:title" content="Обзор официального сайта Джозз казино - преимущества и контакты" />
@@ -78,8 +78,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523">
-                            Турниры
+                        <a >
+                            Турниры (Скоро)
                         </a>
                     </li>
                     <li>
@@ -105,7 +105,7 @@
 
 
             <div class="header__nav-login">
-                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" class="btn btn-registration">Регистрация</a>
+                <a href="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
@@ -207,7 +207,7 @@
 
                 </div>
             </a>
-            <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" title="Регистрация" class="game-list__item">
+            <a  title="Регистрация" class="game-list__item">
                 <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
