--- a/politika.html
+++ b/politika.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="Защита и конфиденциальность персональных данных игроков в онлайн казино Джозз. Играйте ответственно и безопасно в онлайн игры от казино Джозз"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/politika" />
-    <meta property="article:published_time" content='12.03.2021' />
-    <meta property="article:modified_time" content='07.04.2021' />
+    <meta property="article:published_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='17.05.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/konf.webp"/>
     <meta property="og:image:alt" content="политика конфиденциальности в Jozz" />
     <meta name="twitter:title" content="Политика конфиденциальности в Джозз казино" />
@@ -80,8 +80,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523">
-                            Турниры
+                        <a >
+                            Турниры (Скоро)
                         </a>
                     </li>
                     <li>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="header__nav-login">
-                <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" class="btn btn-registration">Регистрация</a>
+                <a href="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
@@ -372,7 +372,7 @@
 
                 </div>
             </a>
-            <a href="https://jozzpromo.net/alt/jozz/registration?19873517649a71473ffe5d05c95ed523" title="Регистрация" class="game-list__item">
+            <a  title="Регистрация" class="game-list__item">
                 <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
