--- a/nastolnye.html
+++ b/nastolnye.html
@@ -257,7 +257,7 @@
 
                 </div>
             </a>
-            <a href="/nights-of-egypt" title="Nights of Egypt" class="game-list__item">
+            <a  title="Nights of Egypt" class="game-list__item">
                 <p class="game-text">Nights of Egypt</p>
                 <div class="game-list__item-img">
 
