--- a/pravila-i-usloviya.html
+++ b/pravila-i-usloviya.html
@@ -181,7 +181,7 @@
             <li>Использует ВПН, прокси либо иные способы замаскировать IP. </li>
         </ul>
         <div class="game-list">
-            <a href="/divine-fortune" title="Divine Fortune" class="game-list__item">
+            <a title="Divine Fortune" class="game-list__item">
                 <p class="game-text">Divine Fortune</p>
                 <div class="game-list__item-img">
 
@@ -245,7 +245,7 @@
 
                 </div>
             </a>
-            <a href="/nights-of-egypt" title="Nights of Egypt" class="game-list__item">
+            <a title="Nights of Egypt" class="game-list__item">
                 <p class="game-text">Nights of Egypt</p>
                 <div class="game-list__item-img">
 
