--- a/zerkalo.html
+++ b/zerkalo.html
@@ -169,7 +169,7 @@
                 Если гемблер уже зарегистрировался на официальном сайте, ему нельзя создавать аккаунт через зеркало.</li>
         </ul>
   
-            <img class="description-img" data-src='/img/JozzCasino.webp' src='/img/1px.webp' title='Jozz Casino' alt='Jozz Casino - Джозз казино'>
+            <img class="description-img" src='/img/JozzCasino.webp' title='Jozz Casino' alt='Jozz Casino - Джозз казино'>
       
         <h2 id="3">Поиск активного зеркала Jozz</h2>
         <p>Чтобы иметь доступ к заблокированному сайту казино Джозз, нужно найти ссылку на рабочее зеркало. Для этого откройте поисковую систему, впишите в строку запрос «зеркало Джозз казино» и нажмите Enter.
