--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
             <div class="header__nav-login">
-                <a href="/login" class="btn btn-registration">Регистрация</a>
+                <a href="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" class="btn btn-registration">Регистрация</a>
                 <a href="/registraciya" class="btn-secondary btn-login">Войти</a>
 
             </div>
