--- a/nastolnye.html
+++ b/nastolnye.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon"  href="/img/favicon.ico" />
-    <title>Настольные онлайн игры в Джозз казино играть бесплатно и без регистрации</title>
+    <title>Настольные игры в онлайн казино Джозз играть бесплатно без регистрации</title>
     <meta name="robots" content="index,follow">
-    <meta name="title" content="Настольные онлайн игры в Джозз казино бесплатно и без регистрации"/>
-    <meta name="keywords" content="настольные игры Джозз казино, настольные онлайн игры Джозз казино, настольные игры казино играть "/>
-    <meta name="description" content="Играть в настольные игры бесплатно и без регистрации на официальном сайте Jozz казино или рабочем зеркале с бонусами за регистрацию"/>
+    <meta name="title" content="Настольные игры в онлайн казино Джозз играть бесплатно без регистрации"/>
+    <meta name="keywords" content="настольные игры казино Джозз, настольные онлайн игры, казино Джозз, настольные игры казино играть "/>
+    <meta name="description" content="Играть в настольные игры онлайн на официальном сайте казино Джозз бесплатно без регистрации или на реальные деньги с выигрышем до 1 млн $"/>
     <link rel="canonical" href="https://jozzcazino.github.io/nastolnye"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:title" content="Настольные онлайн игры в Джозз казино бесплатно и без регистрации"/>
-    <meta property="og:description" content="Играть в настольные игры бесплатно и без регистрации на официальном сайте Jozz казино или рабочем зеркале с бонусами за регистрацию"/>
+    <meta property="og:title" content="Настольные игры в онлайн казино Джозз играть бесплатно без регистрации"/>
+    <meta property="og:description" content="Играть в настольные игры онлайн на официальном сайте казино Джозз бесплатно без регистрации или на реальные деньги с выигрышем до 1 млн $"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/nastolnye" />
     <meta property="article:published_time" content='17.05.2021' />
-    <meta property="article:modified_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='03.09.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/table.webp"/>
     <meta property="og:image:alt" content="настольные игры в Jozz" />
-    <meta name="twitter:title" content="Настольные онлайн игры в Джозз казино бесплатно и без регистрации" />
-    <meta name="twitter:description" content="Играть в настольные игры бесплатно и без регистрации на официальном сайте Jozz казино или рабочем зеркале с бонусами за регистрацию" />
+    <meta name="twitter:title" content="Настольные игры в онлайн казино Джозз играть бесплатно без регистрации" />
+    <meta name="twitter:description" content="Играть в настольные игры онлайн на официальном сайте казино Джозз бесплатно без регистрации или на реальные деньги с выигрышем до 1 млн $" />
     <meta name="twitter:image" content="https://jozzcazino.github.io/img/table.webp" />
     <meta name="twitter:card" content="summary_large_image" />
     <script type="application/ld+json">
@@ -31,16 +30,21 @@
             "@context":"https://schema.org",
             "@type":"SiteNavigationElement",
             "headline":"Настольные онлайн игры в Джозз казино играть бесплатно и без регистрации",
-            "name":["Казино Jozz","Игровые автоматы","Покер","Настольные игры","Регистрация","Зеркало","Бонусы","Кэшбек","Вывод денег", "Рулетка"],
-            "description":["Джозз казино вход и регистрация на официальный сайт и рабочее зеркало Jozz Casino",
-                "Джозз казино играть в лучшие онлайн автоматы бесплатно без регистрации или на реальные деньги. Новое казино 2021 года, получи бонус за регистрацию",
-                "Играть в онлайн покер в Джозз казино бесплатно без регистрации или на реальные деньги. Играй в лучший онлайн покер от мировых провайдеров",
-                "Играть в настольные игры бесплатно и без регистрации на официальном сайте Jozz казино или рабочем зеркале",
-                "Зарегистрироваться на официальном сайте Джозз казино бесплатно, правила и особенности на Jozz Casino",
-                "Рабочее зеркало Джозз казино. Не заходит на официальный сайт Джозз казино - воспользуйтесь актуальным зеркалом Jozz казино",
-                "Получить приветственный пакет бонусов от Джозз казино, регистрируйся на официальном сайте и рабочем зеркале Jozz казино",
-                "Джозз казино дарит еженедельный кэшбек всем зарегистрированным игрокам. Начинай играть на деньги и получай свой cashback в пятницу",
-                "Внесение денег на официальный сайт Джозз казино и быстрый вывод выигрышей без комиссии и дополнительных платежей",
+            "name":["Казино Jozz","Игровые автоматы","Покер","Настольные игры","Регистрация","Зеркало","Бонусы","Кэшбек","Вывод денег","Стартовый бонус","Джекпоты","Лайв игры","Игра на деньги","Мобильное казино", "Рулетка"],
+            "description":["Официальный сайт онлайн казино Джозз - лучшие игровые автоматы и слоты бесплатно и на реальные деньги с бонусами и быстрым выводом денег Jozz Casino Online",
+                "Играть в автоматы и слоты бесплатно без регистрации или на деньги на официальном сайте казино Джозз и рабочем зеркале Casino Jozz",
+                "Играть в покер онлайн бесплатно без регистрации или на реальные деньги с джекпотом на официальном сайте казино Джозз",
+                "Играть в настольные игры онлайн на официальном сайте казино Джозз бесплатно без регистрации или на реальные деньги с выигрышем до 1 млн $",
+                "Зарегистрироваться в онлайн казино Джозз и получить стартовый бонус от официального сайта и рабочего зеркала Jozz",
+                "Зеркало онлайн казино Джозз - вход и регистрация в рабочем зеркале официального сайта онлайн казино JOZZ, обход блокировок и запретов",
+                "Получить бонус за регистрацию в онлайн казино Джозз - деньги и фриспины для новичков, а статусы, кэшбэки и прочее для постоянных игроков",
+                "Кэшбэк в казино Джозз - как получить возврат денег без отыгрыша и вывести из онлайн казино Jozz. Отличия правил получения cashback в зеркале онлайн казино",
+                "Быстрое пополнение счета и моментальный вывод денег с официального сайта онлайн казино Джозз и рабочего зеркала",
+                "Получить бонус за регистрацию, стартовый бонус от казино Джозз как вывести бонус без отыгрыша с официального сайта Casino Jozz",
+                "Игровые автоматы и слоты с джекпотом на официальном сайте и рабочем зеркале онлайн казино Джозз",
+                "Играть в игры лайв казино с живым дилером на реальные деньи с выигрышами. Атмостфера реального казино на официальном сайте Casino Jozz",
+                "Играть на деньги в автоматы или настольные игры на официальном сайте казино Джозз или рабочем зеркале. Получить выигрыши в игре на деньги и вывести на карту",
+                "Играть в мобильном казино Джозз - бесплатные игровые автоматы, лучшие бонусы, мобильные игры в онлайн казино играть проще чем с компьютера. Получи 500$ на мобильные автоматы",
                 "Играть в онлайн рулетку бесплатно без регистрации или на реальные деньги с быстрым выводом выигрышей на официальном сайте Джозз казино"],
             "url":["https://jozzcazino.github.io/",
                 "https://jozzcazino.github.io/avtomaty",
@@ -51,6 +55,11 @@
                 "https://jozzcazino.github.io/bonusy",
                 "https://jozzcazino.github.io/cashback",
                 "https://jozzcazino.github.io/platezhi",
+                "https://jozzcazino.github.io/start-bonus",
+                "https://jozzcazino.github.io/jackpoty",
+                "https://jozzcazino.github.io/zhivye-igry",
+                "https://jozzcazino.github.io/igra-na-dengi",
+                "https://jozzcazino.github.io/mobilnaya-versiya",
                 "https://jozzcazino.github.io/ruletka"]
         }
     </script>
@@ -80,8 +89,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a >
-                            Турниры (Скоро)
+                        <a href="/zhivye-igry">
+                            Лайв игры
                         </a>
                     </li>
                     <li>
@@ -131,6 +140,14 @@
                     <div class="game-type__item">
                         <div class="game-type__image game-type__image--all"></div>
                         <a href="/poker"><span class="game-type__title">Покер</span></a>
+                    </div>
+                    <div class="game-type__item">
+                        <div class="game-type__image game-type__image--all"></div>
+                        <a href="/zhivye-igry"><span class="game-type__title">Живые игры </span></a>
+                    </div>
+                    <div class="game-type__item">
+                        <div class="game-type__image game-type__image--all"></div>
+                        <a href="/jackpoty"><span class="game-type__title">Джекпоты </span></a>
                     </div>
                     <div class="game-type__item">
                         <div class="game-type__image game-type__image--all"></div>
@@ -327,7 +344,7 @@
 
                 </div>
             </a>
-            <a  title="Регистрация" class="game-list__item">
+            <a href="/registraciya" title="Регистрация" class="game-list__item">
                 <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
@@ -388,7 +405,7 @@
                 </li>
                 <li class="payment-box__item">
                     <span class="payment-box__link yandex-wallet-icon">
-                        <span class="payment-box__text">Яндекс.Деньги</span>
+                        <span class="payment-box__text">Ю.Money</span>
                     </span>
                 </li>
                 <li class="payment-box__item">
@@ -410,9 +427,10 @@
                 <a href="/o-nas">О нас</a>
                 <a href="/otvetstvennaya-igra">Ответственная игра</a>
                 <a href="/pravila-i-usloviya">Правила и условия</a>
-                <a href="/platezhi">Вывод денег</a>
                 <a href="/cookie">Политика файлов cookie</a>
                 <a href="/politika">Политика конфиденциальности</a>
+                <a href="/igra-na-dengi">Игра на деньги</a>
+                <a href="/start-bonus">Стартовый бонус</a>
             </div>
         </div>
         <ul class="provider-list">
