--- a/ruletka.html
+++ b/ruletka.html
@@ -11,7 +11,6 @@
     <meta name="keywords" content=""/>
     <meta name="description" content="Играть в онлайн рулетку бесплатно без регистрации или на реальные деньги с быстрым выводом выигрышей на официальном сайте Джозз казино"/>
     <link rel="canonical" href="https://jozzcazino.github.io/ruletka"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:title" content="Онлайн рулетка бесплатно и на деньги в Джозз казино"/>
@@ -19,7 +18,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://jozzcazino.github.io/ruletka" />
     <meta property="article:published_time" content='17.05.2021' />
-    <meta property="article:modified_time" content='17.05.2021' />
+    <meta property="article:modified_time" content='03.09.2021' />
     <meta property="og:image" content="https://jozzcazino.github.io/img/ruletka.webp"/>
     <meta property="og:image:alt" content="Онлайн рулетка в Jozz" />
     <meta name="twitter:title" content="Онлайн рулетка бесплатно и на деньги в Джозз казино" />
@@ -31,16 +30,21 @@
         "@context":"https://schema.org",
         "@type":"SiteNavigationElement",
         "headline":"Онлайн рулетка бесплатно и на деньги в Джозз казино",
-        "name":["Казино Jozz","Игровые автоматы","Покер","Настольные игры","Регистрация","Зеркало","Бонусы","Кэшбек","Вывод денег", "Рулетка"],
-        "description":["Джозз казино вход и регистрация на официальный сайт и рабочее зеркало Jozz Casino",
-            "Джозз казино играть в лучшие онлайн автоматы бесплатно без регистрации или на реальные деньги. Новое казино 2021 года, получи бонус за регистрацию",
-            "Играть в онлайн покер в Джозз казино бесплатно без регистрации или на реальные деньги. Играй в лучший онлайн покер от мировых провайдеров",
-            "Играть в настольные игры бесплатно и без регистрации на официальном сайте Jozz казино или рабочем зеркале",
-            "Зарегистрироваться на официальном сайте Джозз казино бесплатно, правила и особенности на Jozz Casino",
-            "Рабочее зеркало Джозз казино. Не заходит на официальный сайт Джозз казино - воспользуйтесь актуальным зеркалом Jozz казино",
-            "Получить приветственный пакет бонусов от Джозз казино, регистрируйся на официальном сайте и рабочем зеркале Jozz казино",
-            "Джозз казино дарит еженедельный кэшбек всем зарегистрированным игрокам. Начинай играть на деньги и получай свой cashback в пятницу",
-            "Внесение денег на официальный сайт Джозз казино и быстрый вывод выигрышей без комиссии и дополнительных платежей",
+        "name":["Казино Jozz","Игровые автоматы","Покер","Настольные игры","Регистрация","Зеркало","Бонусы","Кэшбек","Вывод денег","Стартовый бонус","Джекпоты","Лайв игры","Игра на деньги","Мобильное казино", "Рулетка"],
+        "description":["Официальный сайт онлайн казино Джозз - лучшие игровые автоматы и слоты бесплатно и на реальные деньги с бонусами и быстрым выводом денег Jozz Casino Online",
+            "Играть в автоматы и слоты бесплатно без регистрации или на деньги на официальном сайте казино Джозз и рабочем зеркале Casino Jozz",
+            "Играть в покер онлайн бесплатно без регистрации или на реальные деньги с джекпотом на официальном сайте казино Джозз",
+            "Играть в настольные игры онлайн на официальном сайте казино Джозз бесплатно без регистрации или на реальные деньги с выигрышем до 1 млн $",
+            "Зарегистрироваться в онлайн казино Джозз и получить стартовый бонус от официального сайта и рабочего зеркала Jozz",
+            "Зеркало онлайн казино Джозз - вход и регистрация в рабочем зеркале официального сайта онлайн казино JOZZ, обход блокировок и запретов",
+            "Получить бонус за регистрацию в онлайн казино Джозз - деньги и фриспины для новичков, а статусы, кэшбэки и прочее для постоянных игроков",
+            "Кэшбэк в казино Джозз - как получить возврат денег без отыгрыша и вывести из онлайн казино Jozz. Отличия правил получения cashback в зеркале онлайн казино",
+            "Быстрое пополнение счета и моментальный вывод денег с официального сайта онлайн казино Джозз и рабочего зеркала",
+            "Получить бонус за регистрацию, стартовый бонус от казино Джозз как вывести бонус без отыгрыша с официального сайта Casino Jozz",
+            "Игровые автоматы и слоты с джекпотом на официальном сайте и рабочем зеркале онлайн казино Джозз",
+            "Играть в игры лайв казино с живым дилером на реальные деньи с выигрышами. Атмостфера реального казино на официальном сайте Casino Jozz",
+            "Играть на деньги в автоматы или настольные игры на официальном сайте казино Джозз или рабочем зеркале. Получить выигрыши в игре на деньги и вывести на карту",
+            "Играть в мобильном казино Джозз - бесплатные игровые автоматы, лучшие бонусы, мобильные игры в онлайн казино играть проще чем с компьютера. Получи 500$ на мобильные автоматы",
             "Играть в онлайн рулетку бесплатно без регистрации или на реальные деньги с быстрым выводом выигрышей на официальном сайте Джозз казино"],
         "url":["https://jozzcazino.github.io/",
             "https://jozzcazino.github.io/avtomaty",
@@ -51,6 +55,11 @@
             "https://jozzcazino.github.io/bonusy",
             "https://jozzcazino.github.io/cashback",
             "https://jozzcazino.github.io/platezhi",
+            "https://jozzcazino.github.io/start-bonus",
+            "https://jozzcazino.github.io/jackpoty",
+            "https://jozzcazino.github.io/zhivye-igry",
+            "https://jozzcazino.github.io/igra-na-dengi",
+            "https://jozzcazino.github.io/mobilnaya-versiya",
             "https://jozzcazino.github.io/ruletka"]
     }
 </script>
@@ -80,8 +89,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a >
-                            Турниры (Скоро)
+                        <a href="/zhivye-igry">
+                            Лайв игры
                         </a>
                     </li>
                     <li>
@@ -131,6 +140,14 @@
                     <div class="game-type__item">
                         <div class="game-type__image game-type__image--all"></div>
                         <a href="/poker"><span class="game-type__title">Покер</span></a>
+                    </div>
+                    <div class="game-type__item">
+                        <div class="game-type__image game-type__image--all"></div>
+                        <a href="/zhivye-igry"><span class="game-type__title">Живые игры </span></a>
+                    </div>
+                    <div class="game-type__item">
+                        <div class="game-type__image game-type__image--all"></div>
+                        <a href="/jackpoty"><span class="game-type__title">Джекпоты </span></a>
                     </div>
                     <div class="game-type__item">
                         <div class="game-type__image game-type__image--all"></div>
@@ -316,87 +333,55 @@
 
         <span>Читайте также:</span>
         <div class="game-list">
-            <a  title="Divine Fortune" class="game-list__item">
-                <p class="game-text">Divine Fortune</p>
+            <a href="/bonusy" title="Бонусы" class="game-list__item">
+                <p class="game-text">Бонусы</p>
                 <div class="game-list__item-img">
 
-                    <img src='/img/divine.webp'  title='Divine Fortune' alt='Divine Fortune'>
+                    <img src='/img/bonus.webp'  title='Бонусы' alt='Бонусы'>
 
                 </div>
             </a>
-            <a  title="Dead or Alive" class="game-list__item">
-                <p class="game-text">Dead or Alive</p>
+            <a  href="/cashback" title="Кэшбек" class="game-list__item">
+                <p class="game-text">Кэшбек</p>
                 <div class="game-list__item-img">
 
-                    <img src='/img/alive.webp'  title='Dead or Alive' alt='Dead or Alive'>
+                    <img src='/img/cash.webp'  title='Кэшбек' alt='Кэшбек'>
 
                 </div>
             </a>
-            <a  title="Dead or Alive 2" class="game-list__item">
-                <p class="game-text">Dead or Alive 2</p>
+            <a href="/zerkalo" title="Зеркало Казино" class="game-list__item">
+                <p class="game-text">Зеркало Казино</p>
                 <div class="game-list__item-img">
 
-                    <img src='/img/dead.webp'  title='Dead or Alive 2' alt='Dead or Alive 2'>
+                    <img src='/img/JozzCasino.webp'  title='Зеркало Казино' alt='Зеркало Казино'>
 
                 </div>
             </a>
-            <a  title="Sakura Fortune" class="game-list__item">
-                <p class="game-text">Sakura Fortune</p>
+            <a href="/registraciya" title="Регистрация" class="game-list__item">
+                <p class="game-text">Регистрация</p>
                 <div class="game-list__item-img">
 
-                    <img src='/img/sakura.webp'  title='Sakura Fortune' alt='Sakura Fortune'>
+                    <img src='/img/reg.webp'  title='Регистрация' alt='Регистрация'>
 
                 </div>
             </a>
-            <a  title="Fat Santa" class="game-list__item">
-                <p class="game-text">Fat Santa</p>
+            <a href="/platezhi" title="Ввод и вывод денег" class="game-list__item">
+                <p class="game-text">Ввод и вывод денег</p>
                 <div class="game-list__item-img">
 
-                    <img src='/img/fat.webp'  title='Fat Santa' alt='Fat Santa'>
+                    <img src='/img/platezhi.webp'  title='Ввод и вывод денег' alt='Ввод и вывод денег'>
 
                 </div>
             </a>
-            <a  title="Gonzo's Quest MW" class="game-list__item">
-                <p class="game-text">Gonzo's Quest MW</p>
+            <a href="/mobilnaya-versiya" title="Мобильная версия Джозз казино" class="game-list__item">
+                <p class="game-text">Мобильная версия</p>
                 <div class="game-list__item-img">
 
-                    <img src='/img/gonzo.webp'  title='Gonzos Quest MW' alt='Gonzos Quest MW'>
+                    <img src='/img/mob.webp'  title='Мобильная версия Джозз казино' alt='Мобильная версия Джозз казино'>
 
                 </div>
             </a>
-            <a  title="Book of Souls" class="game-list__item">
-                <p class="game-text">Book of Souls</p>
-                <div class="game-list__item-img">
-
-                    <img src='/img/book.webp'  title='Book of Souls' alt='Book of Souls'>
-
-                </div>
-            </a>
-            <a  title="Extra Chilli" class="game-list__item">
-                <p class="game-text">Extra Chilli</p>
-                <div class="game-list__item-img">
-
-                    <img src='/img/extra.webp'  title='Extra Chilli' alt='Extra Chilli'>
-
-                </div>
-            </a>
-            <a  title="Nights of Egypt" class="game-list__item">
-                <p class="game-text">Nights of Egypt</p>
-                <div class="game-list__item-img">
-
-                    <img src='/img/nights.webp'  title='Nights of Egypt' alt='Nights of Egypt'>
-
-                </div>
-            </a>
-            <a  title="Egyptian Rebirth 2" class="game-list__item">
-                <p class="game-text">Egyptian Rebirth 2</p>
-                <div class="game-list__item-img">
-
-                    <img src='/img/rebith.webp'  title='Egyptian Rebirth 2' alt='Egyptian Rebirth 2'>
-
-                </div>
-            </a>
-            <a class="game-list__item _add">
+            <a href="https://jozzpromo.net/alt/jozz/registration?3f8799e0a1f4431f168d4eba9bcedcea" class="game-list__item _add">
                 <div class="game-list__item-img">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </div>
@@ -433,7 +418,7 @@
                 </li>
                 <li class="payment-box__item">
                     <span class="payment-box__link yandex-wallet-icon">
-                        <span class="payment-box__text">Яндекс.Деньги</span>
+                        <span class="payment-box__text">Ю.Money</span>
                     </span>
                 </li>
                 <li class="payment-box__item">
@@ -455,9 +440,10 @@
                 <a href="/o-nas">О нас</a>
                 <a href="/otvetstvennaya-igra">Ответственная игра</a>
                 <a href="/pravila-i-usloviya">Правила и условия</a>
-                <a href="/platezhi">Вывод денег</a>
                 <a href="/cookie">Политика файлов cookie</a>
                 <a href="/politika">Политика конфиденциальности</a>
+                <a href="/igra-na-dengi">Игра на деньги</a>
+                <a href="/start-bonus">Стартовый бонус</a>
             </div>
         </div>
         <ul class="provider-list">
