--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </ul>
 
 
-            <img class="description-img" src='/img/JozzCasino.webp'  title='официальный сайт Jozz Casino' alt='официальный сайт казино Джозз'>
+            <img style="float: right; width: 40%" src='/img/JozzCasino.webp'  title='официальный сайт Jozz Casino' alt='официальный сайт казино Джозз'>
 
             <h2 id="provaidery">Провайдеры на официальном сайте онлайн казино</h2>
             <p>В казино Джозз размещены игры от 26 разработчиков, каждый из которых имеет лицензию на выпуск азартного софта. Все игры, представленные на сайте,
