--- a/zhivye-igry.html
+++ b/zhivye-igry.html
@@ -197,7 +197,7 @@
             Разница между ними лишь в том, что в версии live последний активно участвует в игре.
             В зависимости от разновидности лайв-покера варьируются и правила раздачи карт, а также прочие условия игры.
             Ознакомиться с правилами слотов детально возможно на сайте разработчика.</p>
-
+        <img style="width: 80%; margin: auto" src='/img/zhivye-igry.webp'  title='лайв игры с живым дилером' alt='лайв игры с живым дилером в казино Джозз'>
         <h2 id="live-ruletka">Лайв рулетка казино Джозз</h2>
         <p>Онлайн рулетка с живым крупье – одна из наиболее популярных игр в казино.
             Ее главные атрибуты – движущееся колесо и шарик. Игровой процесс в рулетке ведется за столом с секторами для ставок, соответствующими ячейкам на колесе.
