--- a/jackpoty.html
+++ b/jackpoty.html
@@ -190,6 +190,7 @@
             <li>Прогрессивный. Сумма главного выигрыша увеличивается, начиная с минимального установленного размера, к которому прибавляется процент от ставок,
                 сделанных всеми игроками в конкретной игре.</li>
         </ol>
+        <img style="width: 80%; margin: auto" src='/img/jackpoty.webp'  title='игры с джекпотом в онлайн казино Джозз' alt='игры с джекпотом в онлайн казино Джозз'>
         <h2 id="preimushestva-igr">Преимущества игр с джекпотом</h2>
         <p>Несомненным преимуществом игры в слоты с джекпотом является возможность сорвать главный приз и в одночасье стать богатым.
             При этом совсем не обязательно играть на максимальных ставках. Даже, поставив на кон несколько долларов, можно в итоге получить сотни тысяч, а иногда даже и несколько миллионов.
