--- a/start-bonus.html
+++ b/start-bonus.html
@@ -193,6 +193,7 @@
             необходимые для верификации личности гемблера. Подавать заявку на <a href="/platezhi">вывод денег</a> нужно в разделе «Касса», выбрав подходящую платежную систему из предложенного списка и указав сумму вывода.
             Игроки, которые успешно прошли верификацию, получают деньги в течение нескольких часов. Сроки вывода на карты банков занимают от 1 до 3 рабочих дней.
             При размещении запроса стоит учитывать, что снятие денег должно производиться посредством той же платежной системы, при помощи которой был пополнен счет.</p>
+        <img style="float: right; width: 40%" src='/img/start.webp'  title='стартовый бонус в казино Jozz' alt='стартовый бонус в казино Jozz'>
         <h2 id="bonusy-v-zerkale">Стартовый бонус в рабочем зеркале Джозз</h2>
         <p>Зеркала официального сайта казино Джозз обеспечивают игрокам доступ к их аккаунтам при возникновении проблем со входом в казино.
             Зеркало - это копия официального сайта, поэтому и список доступных на них бонусных предложений соответствует. Условия начисления приветственных бонусов,
